tests/gabc-dump/should-fail/bad-var-slur.gabc
name: bad slur;
%%
(c4) (;[oslur:1{]) (::)
